crates/webfang_mcp/tests/snapshots/selector_integration__empty_page.snap
---
source: crates/webfang_mcp/tests/selector_integration.rs
assertion_line: 200
expression: pretty(json)
---
{
  "diagnostic": {
    "error_kind": "EmptyDocument",
    "report": {
      "common_classes": [],
      "common_ids": [],
      "element_count": 3,
      "max_depth": 2,
      "tag_counts": {
        "body": 1,
        "head": 1,
        "html": 1
      },
      "truncated": false
    },
    "suggestions": []
  },
  "results": [
    {
      "author": null,
      "content": "",
      "date": null,
      "excerpt": null,
      "title": "Empty Page",
      "url": "https://example.com/"
    }
  ],
  "selector_applied": true,
  "selector_matched": false
}
