crates/webfang_mcp/tests/snapshots/selector_integration__zero_match_selector.snap
---
source: crates/webfang_mcp/tests/selector_integration.rs
expression: pretty(json)
---
{
  "diagnostic": {
    "error_kind": "ZeroMatches",
    "report": {
      "common_classes": [
        [
          "post",
          2
        ],
        [
          "main-content",
          1
        ],
        [
          "navigation",
          1
        ],
        [
          "sidebar",
          1
        ]
      ],
      "common_ids": [
        [
          "footer",
          1
        ],
        [
          "header",
          1
        ]
      ],
      "element_count": 25,
      "max_depth": 6,
      "tag_counts": {
        "a": 2,
        "article": 2,
        "aside": 1,
        "body": 1,
        "footer": 1,
        "h1": 1,
        "h2": 2,
        "h3": 1,
        "head": 1,
        "header": 1,
        "html": 1,
        "li": 2,
        "main": 1,
        "meta": 2,
        "nav": 1,
        "p": 3,
        "title": 1,
        "ul": 1
      },
      "truncated": false
    },
    "suggestions": [
      {
        "score": 0.766025641025641,
        "selector": ".main-content"
      },
      {
        "score": 0.74,
        "selector": ".post"
      },
      {
        "score": 0.6237373737373737,
        "selector": ".navigation"
      }
    ]
  },
  "results": [
    {
      "author": null,
      "content": "",
      "date": null,
      "excerpt": null,
      "title": "Full Page",
      "url": "https://example.com/"
    }
  ],
  "selector_applied": true,
  "selector_matched": false
}
